ajustes para envio de correo y validacion de usuario

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ EXPIRE_IN_JWT = 3h
 MAILER_SERVICE= gmail
 MAILER_EMAIL= maritere.18.mp@gmail.com
 MAILER_SECRET_KEY=vzbybqknvcfooihi
-WEBSERVICE_URL=localhost:3000
-
+WEBSERVICE_URL= localhost:3000
+SENDMAIL=true
 
 
 
