--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/jsonwebtoken": "9.0.7",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "env": "^0.0.2",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
